[package]
name = "aya-test"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { version = ">=0.11", features=["async_tokio"] }
aya-log = "0.1"
clap = { version = "4.1", features = ["derive"] }
aya-test-common = { path = "../aya-test-common", features = ["user"] }
anyhow = "1"
env_logger = "0.10"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }

[[bin]]
name = "aya-test"
path = "src/main.rs"
